objects/CalloutMetadata__c.object
<CustomObject>
    <fields>
        <fullName>HTTPAction__c</fullName>
        <label>HTTPAction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationProcessingClass__c</fullName>
        <label>Integration Processing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutboundDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Callout Metadata (Outbound DataRaptor Bundle)</relationshipLabel>
        <relationshipName>CalloutMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersistCalloutData__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Persist Callout Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResultDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Callout Metadata (Response DataRaptor Bundle)</relationshipLabel>
        <relationshipName>CalloutMetadataResponse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SystemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Callout Metadata</relationshipLabel>
        <relationshipName>CalloutMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransformURLDataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transform URL DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Callout Metadata (Transform URL DataRaptor Bundle)</relationshipLabel>
        <relationshipName>CalloutMetadataTransformURL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Callout Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IntegrationProcessingClass__c</columns>
        <columns>SystemId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Callout Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>